testing/tests/melt/negative/lvalues_10.c

int main() 
{
    int n = 0;
    +n = 2; // Unary plus converts an lvalue to an rvalue
    return 0;
}
